--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "beyondcode/laravel-websockets": "^1.14",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
+        "pusher/pusher-php-server": "^7.2",
+        "react/promise": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
