--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "devDependencies": {
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.1",
+        "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^1.0.0",
+        "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.1",
-        "vite": "^5.0.0"
+        "vite": "^5.1.3"
     },
     "dependencies": {
         "google-fonts": "^1.0.0",
+        "socket.io-client": "^4.7.4",
         "tailwindcss-animated": "^1.0.1",
         "tw-elements": "^1.1.0"
     }
