--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
+        restart: always
         image: sail-8.3/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
@@ -23,10 +24,10 @@ services:
             - sail
         depends_on:
             - mysql
-            - redis
             - soketi
     mysql:
         image: 'mysql/mysql-server:8.0'
+        restart: always
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
         environment:
@@ -49,24 +50,10 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-    redis:
-        image: 'redis:alpine'
-        ports:
-            - '${FORWARD_REDIS_PORT:-6379}:6379'
-        volumes:
-            - 'sail-redis:/data'
-        networks:
-            - sail
-        healthcheck:
-            test:
-                - CMD
-                - redis-cli
-                - ping
-            retries: 3
-            timeout: 5s
 
     soketi:
         image: quay.io/soketi/soketi:latest
+        restart: always
         ports:
           - "6001:6001"
           - "9601:9601"
@@ -80,6 +67,7 @@ services:
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
+        restart: always
         ports:
           - '8090:80' # Map port 8080 on the host to port 80 in the container
         environment:
